--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ img{
     border-radius: 30px ;
     border: none ;
     padding: 0 -30px;
-    width: 95px;
+    /* width: 95px; */
     height: 30px;
     text-align: center;
     
