--- a/style.css
+++ b/style.css
@@ -18,19 +18,21 @@ img{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    /* background-color: black; */
 }
 .logo img{
-    width: 115px;
+    width: 65px;
     margin: 1em 2em;
 }
 
 .login-content{
     display: flex;
     margin: 3em 12em;
+    justify-items: center;
 }
 
 .log-links{
-    padding: 0  30px;
+    padding: 0  60px;
     text-decoration: none ;
     color: black;
     font-size: 1.2rem;
@@ -40,7 +42,7 @@ img{
     background-color: #5EC576;
     border-radius: 30px ;
     border: none ;
-    padding: 0 -30px;
+    /* padding: 0 -30px; */
     /* width: 95px; */
     height: 30px;
     text-align: center;
