--- a/dashboard.css
+++ b/dashboard.css
@@ -8,106 +8,61 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
-body{
-    overflow : none ;
-}
-#menu{
-    width: 35px;
-    height: 30px;
-    margin: 2em 2em;
-    cursor: pointer;
-    z-index: 100;
-}
-
-.bar {
-    height : 5px ;
-    width: 100%;
-    background-color: black;
-    display: block;
-    margin: 5px 0;
-    transition: 0.3s ease ;
-}
-.nav{
-    padding: 0;
-    margin: 0 1em ;
-    transition: 1s ease;
-    display: none;
-}
-
-.nav li a{
-    color: black;
-    text-decoration: none;
+.header {
+    border: 1px solid #5ec576;
+    box-shadow: 2px 2px #5ec576;}
+.navbar{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    align-content: center;
+    margin: 1em 1em ;
+  
+} 
+nav ul {
+    display: flex;
+
+}
+nav ul li {
+    list-style: none;
+}
+
+nav img {
+    width: 50px;
+}
+nav ul li a {
+    text-decoration: none ;
+    margin-right: 1.5em;
+    color: #5ec576;
     
 }
 
-.nav li img {
-    padding : 1.5em .5em;
+nav ul li a:hover{
+    opacity: .8;
+    text-decoration: 1.3px underline;
+    transition: all 0.3s ease-in-out;
 }
 
-
-
-.nav li{
-    list-style: none ;
-    padding: 5px 2em;
+nav ul li a:active,
+nav ul li a::after{
+    background-color: rgba(0, 0,0,0.5);
+    border-radius: 50px ;
+    padding : 6px 6px ;
 }
-
-
-/* for js part  */
-.icon .bar {
-background-color: black;
-
-}
-.icon #bar1 {
-    transform: translateY(8px) rotate(-45deg);
-}
-
-.icon #bar3 {
-    transform: translateY(-8px) rotate(45deg);
-}
-
-.icon #bar2 {
-    opacity: 0  ;
-}
-
-.change {
-    background-color: #5ec576;
-    height: 100vh;
-    position: absolute;
-    top: 0;
-    z-index : -1 ;
-    width: 20%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    margin: 1px auto;
-}
-/* 
-.clearfix {
-    clear: both;
-} */
 
 .footer {
     position: absolute;
     bottom: 0;
-    background-color: black;
-    width: 100%;
-    height: 10%;
-    color: white;
-    z-index: -10000;
-
+    border-top: 1px solid #5ec576;
+    box-shadow: 2px  #5ec576;
+    width : 100% ;
+    text-align: center;
+    background-color: #37383d;
     
+    
+
 }
 
-.footer-content{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 1.5em 0;
+.footer-content h4 {
+    padding: 2em ;
+    color: #5ec576;
 }
-
