--- a/job.css
+++ b/job.css
@@ -34,6 +34,7 @@ body {
     width: 300px;  
     text-align: center; 
     height: 30px;
+    /* background-color: #5ec576; */
 }
 
 .inp:hover,
@@ -55,4 +56,18 @@ body {
 
 .right {
     margin: 0 10em ;
+}
+
+.btn {
+    background-color: #5ec576;
+    color: white;
+    height: 30px;
+    width: 250px;
+    border: none ;
+    box-shadow: 1px 1px 1px black;
+}
+
+.btn:hover {
+    opacity: .9;
+    box-shadow: 2px 2px 2px black;
 }
